# Vext-dl

./: .gitignore  LICENSE  README.md  main.py  md_gen.py  project_structure.md  pyproject.toml  vext.spec  yt-dlp-opts.md  ytfast_v4.sh
app/: main.py
app/cli/: __init__.py  archive_cmd.py  config_cmd.py  playlist_cmd.py  single_audio_cmd.py  single_video_cmd.py
app/core/: __init__.py  config.py  engine.py  settings.py
app/utils/: __init__.py  initial_dirs_creation.py
tests/: test_vext.py
