[project]
name = "Vext-dl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.2",
    "pydantic>=2.12.5",
    "rich>=14.3.3",
    "shellingham>=1.5.4",
    "typer>=0.24.1",
    "typing>=3.10.0.0",
    "yt-dlp[default]>=2026.3.17",
]
